--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -6,7 +6,7 @@
   transform: translate(-50%, -50%);
   margin: 0 auto;
 
-  .logo {
+  .logo-container {
     text-align: center;
   }
 
@@ -23,18 +23,14 @@
     margin-bottom: 36px;
     width: 400px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.26);
-
-    .input-password {
-      margin-bottom: 40px;
-    }
   }
 
   .submit {
     display: flex;
     align-self: center;
-  }
 
-  .submit button span {
-    color: #fff;
+    span {
+      color: #fff;
+    }
   }
 }
